--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "markdownpreviewer",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://antonioorodungao.github.io/fcc_markdownpreviewer/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "gh-pages": "^2.2.0",
     "marked": "^0.8.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
@@ -17,7 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
